syntax = "proto3";

package codehorse.mkube.statefulset;

option go_package = "github.com/solodba/devcloud/mkube/apps/statefulset";

// 导入外部包
import "apps/pod/pb/pod.proto";
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";
import "apps/pvc/pb/pvc.proto";

// CreateStatefulSetRequest结构体
message CreateStatefulSetRequest {
    // @gotags: bson:"base" json:"base"
    Base Base = 1;
    // @gotags: bson:"template" json:"template"
    pod.Pod Template = 2;
}

// Base结构体
message Base {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"replicas" json:"replicas"
    int32 Replicas = 4;
    // @gotags: bson:"selector" json:"selector"
    repeated ListMapItem Selector = 5;
    // @gotags: bson:"serviceName" json:"serviceName"
    string ServiceName = 6;
    // @gotags: bson:"volumeClaimTemplates" json:"volumeClaimTemplates"
    repeated pvc.CreatePVCRequest VolumeClaimTemplates = 7;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// StatefulSet结构体
message StatefulSet {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"StatefulSet"
    CreateStatefulSetRequest StatefulSet = 2;
}

// StatefulSetSetItem结构体
message StatefulSetSetItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"ready" json:"ready"
    int32 Ready = 3;
    // @gotags: bson:"replicas" json:"replicas"
    int32 Replicas = 4;
    // @gotags: bson:"age" json:"age"
    int64 Age = 5;
}

// StatefulSetSet结构体
message StatefulSetSet {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated StatefulSetSetItem Items = 2;
}